# gomoku-game

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  board.cpp  board.h  main.cpp  position.cpp  position.h  run.bash
.github/workflows/: c-cpp.yml  cmake-single-platform.yml
backend/: CMakeLists.txt  CMakeSettings.json
backend/include/: ai_player.h  board.h  chess.h  console-ui.h  console_ui.h  data-saver.h  data_saver.h  distance_calculator.h  game_manager.h  state.h
backend/src/: ai_player.cpp  board.cpp  chess.cpp  console-ui.cpp  console_ui.cpp  data-saver.cpp  data_saver.cpp  distance_calculator.cpp  game_manager.cpp  main.cpp  state.cpp
docs/: development.md  getting-started.md  protocol.md  roadmap.md  save-format.md  troubleshooting.md
frontend/: engine_bridge.py  gomoku.spec  main.py  settings.py
frontend/assets/audio/: audio_manager.py
frontend/core/: engine.py  engine_bridge.py
frontend/sound/: audio_manager.py
frontend/ui/: components.py  game_page.py  gomoku_window.py  home_page.py  multi_page.py  timer.py
frontend/ui/components/: __init__.py  alart_dialog.py  alert_dialog.py  battle_result.py  game_button.py  game_timer_label.py  gomoku_board.py  input_dialog.py  menu_button.py  wip_dialog.py
frontend/ui/navigation/: __init__.py  router.py
frontend/ui/pages/: __init__.py  game_page.py  home_page.py  multi_game_page.py  multi_page.py  replay_page.py  singal_game_page.py  singal_page.py  (+4 more)
include/: board.h  chess.h  console-ui.h  position.h  ui.h
src/: board.cpp  chess.cpp  console-ui.cpp  main.cpp  position.cpp  ui.cpp
(+7 files in other folders)
